--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -24,7 +24,7 @@
             </div>
             
         </div>
-        <div class="flex justify-between items-center">
+        <div class="flex flex-col xs:flex-row gap-2 justify-between items-center">
             <div class="flex items-center gap-2">
                 <i class="fi fi-rr-at flex"></i>
                 <span class="font-light">ajufilms.se&#64;gmail.com</span>
