--- a/src/app/components/layout/video-card/video-card.component.html
+++ b/src/app/components/layout/video-card/video-card.component.html
@@ -3,7 +3,7 @@
     @for (card of videoCards; track card.id) { 
         @if(card.id === selectedVideoCard) {
             <div class="flex flex-col-reverse sm:flex-row gap-0 lg:gap-12 max-h-full">
-                <div class="flex flex-col flex-grow justify-between gap-10 p-10">
+                <div class="flex flex-col-reverse sm:flex-col flex-grow justify-between gap-10 p-10">
                     <div [@fadeSlide]="'up'">
                         <h2 class="text-2xl md:text-4xl font-bold mb-2 md:mb-4">{{card.title}}</h2>
                         <p class="text-stone-600 text-lg md:text-xl mb-6">{{card.description}}</p>
@@ -14,7 +14,7 @@
                         target="_blank">Solicitar orçamento</a>
                     </div>
                     <div class="flex items-center justify-between gap-7">
-                        <div class="flex items-center self-center sm:self-start gap-6 py-2 rounded-2xl w-[min(30rem,100%)]">
+                        <div class="flex items-center gap-6 py-2 rounded-2xl w-[min(30rem,100%)]">
                             @for (card of videoCards; track card.id) {
                                 <button class="flex flex-grow flex-col-reverse gap-1 justify-center cursor-pointer group"
                                 (click)="setVideoCard(card.id)" [attr.aria-label]="'Mudar para vídeo ' + card.title">
