feat(films-preview): add images

--- a/src/app/components/layout/films-preview/films-preview.component.html
+++ b/src/app/components/layout/films-preview/films-preview.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col gap-4 relative">
   <div class="flex sm:flex-col flex-col-reverse sm:items-start gap-4 sm:absolute sm:top-5 sm:left-5 sm:z-10">
     <div class="flex sm:flex-row flex-col gap-4 bg-stone-100 sm:bg-black/20 p-3 rounded-2xl">
-        @if(selectedFilm?.value !== 'jateado-fosco' && selectedFilm?.value !== 'jateado-leitoso') {
+        @if(selectedFilm?.value !== 'jateado-fosco' && selectedFilm?.value !== 'jateado-leitoso' && selectedFilm !== undefined) {
         <p-selectbutton [options]="selectOptions" [(ngModel)]="currentLocation"
         optionLabel="label" optionValue="value" aria-labelledby="basic"
         size="large" [allowEmpty]="false"
