--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -1,6 +1,7 @@
 <div class="flex flex-col gap-6" InterObs obsClass="fade-in" [intersectChild]="true">
     <div class="flex flex-col items-center">
-        <span class="font-['Avenida',sans-serif] text-6xl">AJU FILMS</span>
+        <!-- <span class="font-['Avenida',sans-serif] text-6xl">AJU FILMS</span> -->
+         <img src="images/aju-films-logo.png" alt="Logotipo da Aju Films" class="h-28 mb-4">
         <h2 class="text-4xl max-w-2xl text-center">Transformamos ambientes <span class="text-gray-500">com conforto, eficiência e estética!</span></h2>
     </div>
     <div class="col-span-2 flex flex-col delay-1">
