--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -2,13 +2,18 @@
 transition-all border-b"
 [ngClass]="{
     'bg-black bg-opacity-20 border-gray-300 border-b': isScrolled && !isScrolledLimit,
-    'text-stone-950 bg-white backdrop-blur-sm bg-opacity-40 border-b border-gray-300': isScrolledLimit,
+    'text-stone-950 bg-white backdrop-blur bg-opacity-40 border-b border-gray-300': isScrolledLimit,
     'text-white border-transparent': !isScrolledLimit,
     }">
     <div>
-        <span style="font-family: 'Avenida';"
+        <!-- <span style="font-family: 'Avenida';"
         class="text-[3.7rem] leading-none text-nowrap transition-all duration-400"
-        [ngClass]="isScrolled ? 'text-[3rem]' : 'text-[3.7rem]'">AJU FILMS</span>
+        [ngClass]="isScrolled ? 'text-[3rem]' : 'text-[3.7rem]'">AJU FILMS</span> -->
+        @if(isScrolledLimit) {
+            <img src="images/aju-films-logo-black-2.png" alt="Logotipo da Aju Films">
+        } @else {
+            <img src="images/aju-films-logo-white.png" alt="Logotipo da Aju Films">
+        }
     </div>
     <div class="flex flex-grow justify-between items-center">
         <nav class="mx-auto">
