feat: improve lazy loading and add preload to images used on (films-preview)

--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -10,9 +10,9 @@ transition-all border-b"
         class="text-[3.7rem] leading-none text-nowrap transition-all duration-400"
         [ngClass]="isScrolled ? 'text-[3rem]' : 'text-[3.7rem]'">AJU FILMS</span> -->
         @if(isScrolledLimit) {
-            <img src="images/aju-films-logo-black-2.png" alt="Logotipo da Aju Films">
+            <img loading="eager" src="images/aju-films-logo-black-2.png" alt="Logotipo da Aju Films">
         } @else {
-            <img src="images/aju-films-logo-white.png" alt="Logotipo da Aju Films">
+            <img loading="eager" src="images/aju-films-logo-white.png" alt="Logotipo da Aju Films">
         }
     </div>
     <div class="flex flex-grow justify-between items-center">
