style: add minor changes on logo

--- a/src/app/components/layout/films-preview/films-preview.component.html
+++ b/src/app/components/layout/films-preview/films-preview.component.html
@@ -41,7 +41,7 @@
     @if(userHasInteracted === false) {
       <div class="px-3 py-1.5 rounded-xl bg-black/30 text-white absolute top-1/2 left-1/2 -translate-x-1/2 translate-y-1/2 z-10
       flex flex-col items-center pointer-events-none" @instructionsPopUp>
-        <span>Deslize para comparar</span>
+        <span class="text-center whitespace-nowrap">Deslize para comparar</span>
         <i class="fi fi-sr-arrows-alt-h flex animate-ping"></i>
       </div>
     }
