feat(film-details): create layout

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -82,6 +82,14 @@
     </div>
 </section>
 
+<section id="films-info" class="overflow-hidden">
+    <div class="c-container py-32">
+        <!-- <h1 class="font-normal text-4xl max-w-2xl text-center mx-auto text-stone-600 mb-16" InterObs obsClass="fade-in">
+        <span class="text-stone-900">Oferecemos modernidade,</span> com produtos e serviços de excelência.</h1> -->
+        <app-film-details/>
+    </div>
+</section>
+
 <section id="beneficios" class="bg-stone-100 overflow-hidden">
     <div class="c-container py-32">
         <h1 class="font-normal text-4xl max-w-2xl text-center mx-auto text-stone-600 mb-16" InterObs obsClass="fade-in">
