--- a/src/app/components/layout/film-details/film-details.component.html
+++ b/src/app/components/layout/film-details/film-details.component.html
@@ -1,6 +1,6 @@
 <article class="flex flex-col rounded-2xl border border-stone-200 max-w-[700px] mx-auto shadow-sm overflow-hidden">
 <div class="bg-stone-200 p-2 flex items-center justify-center">
-  @for(item of films ; track $index) {
+  @for(item of films() ; track $index) {
     <div class="py-1 px-2 sm:px-1.5 cursor-pointer group">
       <span class="block h-2.5 w-2.5 rounded-full group-hover:bg-stone-400
       transition-colors"
@@ -9,33 +9,34 @@
   }
   
 </div>
-<div class="p-5 flex flex-col gap-4">
-  <div class="flex flex-col gap-1">
-    <h1 class="text-xl font-medium">Película de Controle Solar</h1>
-    <div class="flex items-center gap-1 text-sm">
-      <i class="fi fi-sr-star flex text-primary"></i>
-      <span class="text-stone-600">4.6/5</span>
+
+<div #container class="flex flex-nowrap w-full">
+  @for (item of films(); track $index) {
+    <div #item class="basis-[100%] shrink-0">
+      <div class="p-5 flex flex-col gap-4">
+        <div class="flex flex-col gap-1">
+          <h1 class="text-xl font-medium">{{ item.title }}</h1>
+          <div class="flex items-center gap-1 text-sm">
+            <i class="fi fi-sr-star flex text-primary"></i>
+            <span class="text-stone-600">{{ item.rate }}/5</span>
+          </div>
+        </div>
+      
+        <div>
+          <p class="text-stone-600">{{ item.text }}</p>
+        </div>
+      
+      </div>
+      <div class="flex items-center gap-6 rounded-xl m-1.5 bg-stone-100 px-8 py-4 justify-around">
+        @for (info of item.info; track $index) {
+          <div class="text-center">
+            <p class="text-xl text-stone-900 ">{{ info.large_text }}</p>
+            <p class="text-stone-500 text-sm">{{ info.small_text }}</p>
+          </div>
+        }
+      </div>
     </div>
-  </div>
-
-  <div>
-    <p class="text-stone-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa eum hic odit laborum, ea commodi vitae, amet voluptate nemo, sint est eligendi porro. Quam.</p>
-  </div>
-
-</div>
-<div class="flex items-center gap-6 rounded-xl m-1.5 bg-stone-100 px-8 py-4 justify-around">
-  <div class="text-center">
-    <p class="text-xl text-stone-900 ">85%</p>
-    <p class="text-stone-500 text-sm">Redução de calor</p>
-  </div>
-  <div class="text-center">
-    <p class="text-xl text-stone-900 ">99%</p>
-    <p class="text-stone-500 text-sm">Bloqueio Raios UV</p>
-  </div>
-  <div class="text-center">
-    <p class="text-xl text-stone-900 ">15+</p>
-    <p class="text-stone-500 text-sm">Anos de garantia</p>
-  </div>
+  }
 </div>
 
 </article>
