--- a/src/app/components/layout/film-details/film-details.component.html
+++ b/src/app/components/layout/film-details/film-details.component.html
@@ -1,12 +1,14 @@
 <article class="flex flex-col rounded-2xl border border-stone-200 max-w-[700px] mx-auto shadow-sm overflow-hidden">
 <div class="bg-stone-200 p-2 flex items-center justify-center">
   @for(item of films() ; track $index) {
-    <div class="py-1 px-2 sm:px-1.5 cursor-pointer group"
-    (click)="navigateToItem($index)">
-      <span class="block h-2.5 w-2.5 rounded-full group-hover:bg-stone-400
-      transition-colors"
-      [ngClass]="state().currentItem === $index ? 'bg-stone-500' : 'bg-stone-300'"></span>
-    </div>
+    @if(!($index === 0 || $index === films().length -1)) {
+      <button class="py-1 px-2 sm:px-1.5 cursor-pointer group"
+      (click)="navigateToItem($index)">
+        <span class="block h-2.5 w-2.5 rounded-full
+        transition-colors"
+        [ngClass]="state().currentItem === $index ? 'bg-stone-500' : 'bg-stone-300 group-hover:bg-stone-400'"></span>
+      </button>
+    }
   }
   
 </div>
@@ -14,7 +16,8 @@
 <div #containerEl class="flex flex-nowrap w-full transition-transform duration-500"
 (mousedown)="onMouseDown($event, containerEl)"
 (touchstart)="onTouchStart($event, containerEl)"
-(dragstart)="$event.preventDefault()">
+(dragstart)="$event.preventDefault()"
+(transitionend)="onTransitionEnd()">
   @for (item of films(); track $index) {
     <div #itemEl class="basis-[100%] shrink-0 flex flex-col justify-between active:cursor-grabbing">
       <div class="p-5 flex flex-col gap-4">
