--- a/src/app/components/layout/film-details/film-details.component.html
+++ b/src/app/components/layout/film-details/film-details.component.html
@@ -34,8 +34,16 @@
 (dragstart)="$event.preventDefault()"
 (transitionend)="onTransitionEnd()">
   @for (item of films(); track $index) {
-    <div #itemEl class="basis-[100%] shrink-0 overflow-hidden flex flex-col justify-between active:cursor-grabbing">
-      <div class="p-5 flex flex-col gap-4">
+    @let currentIndexActive = $index === state().currentItem;
+    <div #itemEl class="basis-[100%] shrink-0 overflow-hidden flex flex-col justify-between active:cursor-grabbing"
+    [style.maxHeight]="
+      limitElementHeight() === true ? '18rem' :
+      limitElementHeight() === false && currentIndexActive ? '45rem' : '20rem'
+    ">
+    <!-- <div #itemEl class="basis-[100%] shrink-0 overflow-hidden flex flex-col justify-between active:cursor-grabbing
+    transition-[max-height] duration-500 ease-out"
+    [style.maxHeight.rem]="limitElementHeight() ? 18 : 28"> -->
+      <div class="p-5 pb-2">
         @switch (item.top_seller) {
           @case (true) {
             <div class="flex gap-2 items-center flex-wrap">
@@ -50,13 +58,20 @@
             <h1 class="text-xl font-medium">{{ item.title }}</h1>
           }
         }
-    
-        <div>
-          <p class="text-stone-600">{{ item.text }}</p>
-        </div>
-      
       </div>
-      <div class="flex items-start gap-6 rounded-xl m-1.5 bg-stone-100 px-8 py-4 justify-around">
+
+      <p #textEl class="px-5 relative mb-auto
+      text-stone-600 shrink min-h-0 overflow-ellipsis overflow-hidden">{{ item.text }}
+      @if(isTextsClamped()[$index] && limitElementHeight() === true) {
+        <div @fadeIn class="flex items-end justify-center
+        absolute bottom-0 left-0 w-full h-[60px] from-25% bg-gradient-to-t from-white to-transparent">
+          <button class="text-sm px-4 py-1 rounded-xl text-stone-800"
+          (click)="disableLimitElementHeight()">Mostrar Mais</button>
+        </div>
+      }
+      </p>
+
+      <div class="flex items-start sm:gap-6 xs:gap-4 gap-2.5 rounded-xl m-1.5 mt-3 bg-stone-100 sm:px-8 sm:py-4 px-4 py-4 justify-around shrink-0">
         @for (info of item.info; track $index) {
           <div class="text-center">
             <p class="text-xl text-stone-900 ">{{ info.large_text }}</p>
