--- a/src/app/components/layout/films-info/films-info.component.html
+++ b/src/app/components/layout/films-info/films-info.component.html
@@ -1,41 +1,41 @@
-<article class="flex flex-col rounded-2xl border border-stone-200 max-w-[700px] mx-auto shadow-sm overflow-hidden">
-<div class="bg-stone-200 p-2 flex items-center justify-between">
-  <div class="flex items-center">
-    @for(item of films() ; track $index) {
-      @if(!($index === 0 || $index === films().length -1)) {
+<article
+  class="flex flex-col rounded-2xl border border-stone-200 max-w-[700px] mx-auto shadow-sm overflow-hidden"
+>
+  <div class="bg-stone-200 p-2 flex items-center justify-between">
+    <div class="flex items-center">
+    @for(item of films ; track $index) {
+      
         <button class="py-1 px-2 sm:px-1.5 cursor-pointer group"
-        (click)="navigateToItem($index)">
+        (click)="carousel.setCurrentItem($index)">
           <span class="block h-2.5 w-2.5 rounded-full
           transition-colors"
-          [ngClass]="state().currentItem === $index ? 'bg-stone-500' : 'bg-stone-300 group-hover:bg-stone-400'"></span>
+          [ngClass]="activeItem === $index ? 'bg-stone-500' : 'bg-stone-300 group-hover:bg-stone-400'"></span>
         </button>
-      }
+      
     }
   </div>
-  @if(state().autoslide) {
+  @if(autoslide) {
     <button class="p-1"
-    (click)="stopAutoSlide()">
+    (click)="carousel.stopAutoSlide()">
       <i class="fi fi-sr-pause flex text-xs text-stone-500"></i>
       <span class="sr-only">Pausar auto-seleção</span>
     </button>
   } @else {
     <button class="p-1"
-    (click)="startAutoSlide()">
+    (click)="carousel.startAutoSlide()">
       <i class="fi fi-sr-play flex text-xs text-stone-500"></i>
       <span class="sr-only">Iniciar auto-seleção</span>
     </button>
   }
-  
-</div>
+  </div>
 
-<div #containerEl class="flex flex-nowrap w-full transition-transform duration-500"
-(mousedown)="onMouseDown($event, containerEl)"
-(touchstart)="onTouchStart($event, containerEl)"
-(dragstart)="$event.preventDefault()"
-(transitionend)="onTransitionEnd()">
-  @for (item of films(); track $index) {
-    @let currentIndexActive = $index === state().currentItem;
-    <div #itemEl class="basis-[100%] shrink-0 overflow-hidden flex flex-col justify-between active:cursor-grabbing"
+  <app-carousel #carousel [items]="films"
+  (activeItem)="activeItem = $event"
+  >
+    <ng-template let-item let-index="index">
+        
+    @let currentIndexActive = true;
+    <div carouselItem class="basis-[100%] shrink-0 overflow-hidden flex flex-col justify-between active:cursor-grabbing"
     [style.maxHeight]="
       limitElementHeight() === true ? '18rem' :
       limitElementHeight() === false && currentIndexActive ? '45rem' : '20rem'
@@ -62,7 +62,7 @@
 
       <p #textEl class="px-5 relative mb-auto
       text-stone-600 shrink min-h-0 overflow-ellipsis overflow-hidden">{{ item.text }}
-      @if(isTextsClamped()[$index] && limitElementHeight() === true) {
+      @if(isTextsClamped()[index] && limitElementHeight() === true) {
         <div @fadeIn class="flex items-end justify-center pointer-events-none
         absolute bottom-0 left-0 w-full h-[60px] from-25% bg-gradient-to-t from-white to-transparent">
           <button class="text-sm px-4 py-1 rounded-xl text-stone-800 pointer-events-auto"
@@ -80,6 +80,11 @@
         }
       </div>
     </div>
-  }
-</div>
+
+
+
+
+
+    </ng-template>
+  </app-carousel>
 </article>
