--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -87,7 +87,8 @@
         <h1 class="font-normal text-4xl max-w-2xl text-center text-stone-600 mb-8" InterObs obsClass="fade-in">
         <span class="text-stone-900">Descubra detalhes</span> dos nossos produtos.</h1>
         <div class="flex flex-col gap-4 items-center max-w-full" InterObs obsClass="fade-in">
-            <app-film-details class="max-w-full" [films]="filmDetails" />
+            <!-- <app-film-details class="max-w-full" [films]="filmDetails" /> -->
+             <app-films-info></app-films-info>
             <a class="inline-flex items-center gap-2 border border-stone-200 text-stone-950 py-2 px-6 rounded-2xl shadow-sm text-lg font-medium
             hover:scale-105 active:scale-100 transition-transform"
             href="https://wa.me/+5579996121414?text=Ol%C3%A1,%20gostaria%20de%20tirar%20algumas%20d%C3%BAvidas." target="_blank">
