feat: add whatsapp button

--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -35,7 +35,8 @@
                 <span class="font-light">(79) 99612-1414</span>
             </div>
         </div>
-        <div class="border-t border-neutral-900 mt-6 py-6 flex xs:flex-row xs:items-start items-center flex-col justify-between font-light gap-6">
+        <div class="border-t border-neutral-900 mt-6 py-6 flex xs:flex-row xs:items-start items-center xs:text-start text-center
+        flex-col justify-between font-light gap-6">
             <div>
                 <span>&copy; 2025 AjuFilms. Todos direitos reservados </span>
                 <span class="block">CNPJ: 43.274.013/0001-61.</span>
